--- a/apps/frontend/src/app/layouts/navbar/navbar.component.html
+++ b/apps/frontend/src/app/layouts/navbar/navbar.component.html
@@ -86,10 +86,10 @@
         <label tabindex="0" class="btn btn-ghost btn-sm gap-2">
           <div class="avatar placeholder">
             <div class="bg-primary text-primary-content rounded-full w-8">
-              <span class="text-sm">JD</span>
+              <span class="text-sm">{{ currentUserInitials() }}</span>
             </div>
           </div>
-          <span class="hidden md:inline">John Doe</span>
+          <span class="hidden md:inline">{{ currentUserName() }}</span>
         </label>
         <ul
           tabindex="0"
@@ -97,7 +97,7 @@
           <li><a>Profile</a></li>
           <li><a>Settings</a></li>
           <li><hr class="my-1" /></li>
-          <li><a>Logout</a></li>
+          <li><a (click)="logout()">Logout</a></li>
         </ul>
       </div>
     </div>
