--- a/apps/frontend/src/app/layouts/navbar/navbar.component.html
+++ b/apps/frontend/src/app/layouts/navbar/navbar.component.html
@@ -97,8 +97,8 @@
         <ul
           tabindex="0"
           class="dropdown-content menu p-2 shadow-lg bg-base-100 rounded-box w-52 mt-2 z-50">
-          <li><a>Profile</a></li>
-          <li><a>Settings</a></li>
+          <li><a (click)="navigateTo('/profile')">Profile</a></li>
+          <li><a (click)="navigateTo('/workspace-settings')">Settings</a></li>
           <li><hr class="my-1" /></li>
           <li><a (click)="logout()">Logout</a></li>
         </ul>
